# vigra

./: CMakeLists.txt
config/: VigraAddTest.cmake  VigraCPUFeatures.cmake
include/vigra/: convolution_avx.hxx  multi_convolution.hxx  multi_convolution_avx.hxx  separableconvolution_avx.hxx  simdcheck.hxx
src/impex/: CMakeLists.txt  simdcheck.cxx
test/: CMakeLists.txt
test/convolution_avx/: CMakeLists.txt  test.cxx
test/multiconvolution_avx/: CMakeLists.txt  fastfilters.cxx  fastfilters.hxx  speedtest.cxx  test.cxx
vigranumpy/test/: CMakeLists.txt
