IF(ZLIB_FOUND)
  ADD_DEFINITIONS(-DHasZLIB)
  INCLUDE_DIRECTORIES(${SUPPRESS_WARNINGS} ${ZLIB_INCLUDE_DIR})
ENDIF(ZLIB_FOUND)

IF(PNG_FOUND)
  ADD_DEFINITIONS(-DHasPNG)
  INCLUDE_DIRECTORIES(${SUPPRESS_WARNINGS} ${PNG_INCLUDE_DIR})
ENDIF(PNG_FOUND)

IF(JPEG_FOUND)
  ADD_DEFINITIONS(-DHasJPEG)
  INCLUDE_DIRECTORIES(${SUPPRESS_WARNINGS} ${JPEG_INCLUDE_DIR})
ENDIF(JPEG_FOUND)

IF(TIFF_FOUND)
  ADD_DEFINITIONS(-DHasTIFF)
  INCLUDE_DIRECTORIES(${SUPPRESS_WARNINGS} ${TIFF_INCLUDE_DIR})
ENDIF(TIFF_FOUND)

IF(OpenEXR_FOUND)
  ADD_DEFINITIONS(-DHasEXR ${OPENEXR_CPPFLAGS})
  INCLUDE_DIRECTORIES(${SUPPRESS_WARNINGS} ${OPENEXR_INCLUDE_DIR})
ENDIF(OpenEXR_FOUND)

IF(HDF5_FOUND)
  ADD_DEFINITIONS(-DHasHDF5 ${HDF5_CPPFLAGS})
  INCLUDE_DIRECTORIES(${SUPPRESS_WARNINGS} ${HDF5_INCLUDE_DIR})
ENDIF(HDF5_FOUND)

IF (MSVC OR MINGW)
    IF(NOT VIGRA_STATIC_LIB)
        ADD_DEFINITIONS(-DVIGRA_DLL)
    ENDIF()
ELSEIF(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGXX)
    IF(VIGRA_STATIC_LIB)
        ADD_DEFINITIONS(-fPIC -DPIC)
    ENDIF()
ENDIF ()

ADD_LIBRARY(vigraimpex ${LIBTYPE}
    bmp.cxx
    byteorder.cxx
    codecmanager.cxx
    compression.cxx
    exr.cxx
    gif.cxx
    hdr.cxx
    hdf5impex.cxx
    hdf5_rf_impex.cxx
    iccjpeg.c
    imageinfo.cxx
    jpeg.cxx
    lz4.c
    png.cxx
    pnm.cxx
    rgbe.c
    sifImport.cxx
    simdcheck.cxx
    sun.cxx
    tiff.cxx
    viff.cxx
    void_vector.cxx)

set(SOVERSION 12)  # increment this after changing the vigraimpex library
IF(MACOSX)
    SET_TARGET_PROPERTIES(vigraimpex PROPERTIES VERSION ${SOVERSION}.${vigra_version}
                         SOVERSION ${SOVERSION} INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}")
ELSE()
    SET_TARGET_PROPERTIES(vigraimpex PROPERTIES VERSION ${SOVERSION}.${vigra_version} SOVERSION ${SOVERSION})
ENDIF()

IF(JPEG_FOUND)
  TARGET_LINK_LIBRARIES(vigraimpex ${JPEG_LIBRARIES})
ENDIF(JPEG_FOUND)

IF(PNG_FOUND)
  TARGET_LINK_LIBRARIES(vigraimpex ${PNG_LIBRARIES})
ENDIF(PNG_FOUND)

IF(TIFF_FOUND)
  TARGET_LINK_LIBRARIES(vigraimpex ${TIFF_LIBRARIES})
ENDIF(TIFF_FOUND)

IF(OPENEXR_FOUND)
  TARGET_LINK_LIBRARIES(vigraimpex ${OPENEXR_LIBRARIES})
ENDIF(OPENEXR_FOUND)

IF(HDF5_FOUND)
  TARGET_LINK_LIBRARIES(vigraimpex ${HDF5_LIBRARIES})
ENDIF(HDF5_FOUND)

IF(ZLIB_FOUND)
  TARGET_LINK_LIBRARIES(vigraimpex ${ZLIB_LIBRARIES})
ENDIF(ZLIB_FOUND)

CHECK_FOR_AVX(AVX_FLAGS HAVE_FMA HAVE_AVX HAVE_AVX2)
message("FMA = ${HAVE_FMA}")
if(HAVE_FMA)
    target_compile_definitions(vigraimpex PRIVATE HAVE_FMA=${HAVE_FMA})
endif()
if(HAVE_AVX)
    target_compile_definitions(vigraimpex PRIVATE HAVE_AVX=${HAVE_AVX})
elseif(HAVE_AVX2)
    target_compile_definitions(vigraimpex PRIVATE HAVE_AVX2=${HAVE_AVX2})
endif()
message("Using AVX_FLAGS: ${AVX_FLAGS} because ${HAVE_AVX} and ${HAVE_AVX2}")
message("FMA = ${HAVE_FMA}")
target_compile_options(vigraimpex PRIVATE ${AVX_FLAGS})

CHECK_CPUID(HAVE_CPUID_H HAVE_CPUIDEX HAVE_ASM_CPUID)
message("Using HAVE_CPUIDEX: " ${HAVE_CPUIDEX})
if(HAVE_CPUID_H)
    target_compile_definitions(vigraimpex PRIVATE HAVE_CPUID_H=${HAVE_CPUID_H})
elseif(HAVE_CPUIDEX)
    target_compile_definitions(vigraimpex PRIVATE HAVE_CPUIDEX=${HAVE_CPUIDEX})
elseif(HAVE_ASM_CPUID)
    target_compile_definitions(vigraimpex PRIVATE HAVE_ASM_CPUID=${HAVE_ASM_CPUID})
endif()

CHECK_XGETBV(HAVE_ASM_XGETBV HAVE_INTRIN_XGETBV)
if(HAVE_ASM_XGETBV)
    target_compile_definitions(vigraimpex PRIVATE HAVE_ASM_XGETBV=${HAVE_ASM_XGETBV})
    message("HAVE_ASM_XGETBV: ${HAVE_ASM_XGETBV}")
elseif(HAVE_INTRIN_XGETBV)
    message("HAVE_INTRIN_XGETBV: ${HAVE_INTRIN_XGETBV}")
    target_compile_definitions(vigraimpex PRIVATE HAVE_INTRIN_XGETBV=${HAVE_INTRIN_XGETBV})
endif()

INSTALL(TARGETS vigraimpex
        EXPORT vigra-targets
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib${LIB_SUFFIX}
        ARCHIVE DESTINATION lib${LIB_SUFFIX})
